--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -61,6 +61,13 @@ jobs:
           plugin_stars: yes
           plugin_stars_limit: 1
 
+          
+          #website quote
+          plugin_screenshot: yes
+          plugin_screenshot_title: XKCD of the day
+          plugin_screenshot_url: https://xkcd.com
+          plugin_screenshot_selector: "#comic img"
+
 
           # Hobbies
           # Anime 
