--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -61,12 +61,22 @@ jobs:
           plugin_stars: yes
           plugin_stars_limit: 1
 
+          #Plugin topics
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: icons
+
           
           #website quote
           plugin_screenshot: yes
           plugin_screenshot_title: XKCD of the day
           plugin_screenshot_url: https://xkcd.com
           plugin_screenshot_selector: "#comic img"
+
+          #plugin reaction
+          plugin_reactions: yes
+          plugin_reactions_limit: 100
+          plugin_reactions_details: percentage
 
 
           # Hobbies
