--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -87,13 +87,10 @@ jobs:
           plugin_anilist_sections: favorites, watching
           plugin_anilist_limit: 2
 
-          #gist created
-          plugin_gists: yes
 
           #plugin music
           plugin_music: yes
-          plugin_music_playlist: >-
-            https://music.youtube.com/playlist?list=PLd2ArdZjOMpYqzmDw-LwaDDAzHVEadXF0
+          plugin_music_playlist: https://open.spotify.com/playlist/47xnEdlfxDP52q0XTK0xWi
 
           # Peoples
           plugin_people: yes
