--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -91,9 +91,7 @@ jobs:
           #plugin music
           plugin_music: yes
           plugin_music_provider: spotify
-          plugin_music_mode: recent
-          plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
-          plugin_music_limit: 2
+          plugin_music_playlist: https://open.spotify.com/playlist/47xnEdlfxDP52q0XTK0xWi
 
           # Peoples
           plugin_people: yes
