--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -91,7 +91,7 @@ jobs:
           #plugin music
           plugin_music: yes
           plugin_music_provider: youtube
-          plugin_music_playlist: https://www.youtube.com/playlist?list=PLd2ArdZjOMpYqzmDw-LwaDDAzHVEadXF0
+          plugin_music_playlist: https://music.youtube.com/playlist?list=PLd2ArdZjOMpYqzmDw-LwaDDAzHVEadXF0
 
           # Peoples
           plugin_people: yes
