--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -96,6 +96,16 @@ jobs:
           # Peoples
           plugin_people: yes
           plugin_people_types: followers
+
+          #leetcode
+          plugin_leetcode_user: adityarathore2606
+          plugin_leetcode: yes
+          plugin_leetcode_sections: solved, skills, recent
+
+          #rss
+          plugin_rss: yes
+          plugin_rss_source: https://news.ycombinator.com/rss
+          plugin_rss_limit: 4
           
 
           # Configuration order
