--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -106,6 +106,12 @@ jobs:
           plugin_rss: yes
           plugin_rss_source: https://news.ycombinator.com/rss
           plugin_rss_limit: 4
+
+          #chess
+          plugin_chess: yes
+          plugin_chess_token: ${{ secrets.CHESS_TOKEN }}
+          plugin_chess_platform: lichess.org
+          plugin_chess_user: Rathore26
           
 
           # Configuration order
