--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -24,12 +24,12 @@ jobs:
           committer_message: "👾👾👾👾"
 
           # Base configuration
-          base: activity, community, repositories, metadata, commits
-          base_skip: header
+          base: activity, community, repositories, header
+          base_indepth: no
+          base_hireable: no
 
-          # Plugin: Introduction
+          # Plugin: Intro
           plugin_introduction: yes
-          plugin_introduction_title: yes
 
           # Plugin: Lines
           plugin_lines: yes
@@ -45,9 +45,9 @@ jobs:
           # Plugin: Achievements
           plugin_achievements: yes
           plugin_achievements_threshold: C
-          plugin_achievements_secrets: yes
+          plugin_achievements_only: developer, forker, stargazer, deployer
           plugin_achievements_display: compact
-          plugin_achievements_limit: 10
+          
 
           # Plugin: Stargazers
           plugin_stargazers: yes
@@ -101,6 +101,9 @@ jobs:
           #plugin_leetcode_user: adityarathore2606
           #plugin_leetcode: yes
           #plugin_leetcode_sections: solved, skills, recent
+          
+          plugin_gists_user: EchoSingh
+          plugin_gists: yes
 
           #rss
           plugin_rss: yes
