--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -35,7 +35,7 @@ jobs:
           plugin_16personalities: yes
           plugin_16personalities_url: https://www.16personalities.com/profiles/7fd4a3833c7be
           plugin_16personalities_sections: personality, profile, traits
-          plugin_16personalities_scores: no
+          plugin_16personalities_scores: yes
 
           # Plugin: Lines
           plugin_lines: yes
