--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -51,8 +51,8 @@ jobs:
 
           # Plugin: habits
           plugin_habits: yes
-          plugin_habits_facts: no
-          plugin_habits_charts: yes
+          plugin_habits_facts: yes
+          plugin_habits_charts: no
           config_timezone: Asia/Kolkata
 
           # Plugin: WakaTime
