--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -116,10 +116,10 @@ jobs:
           plugin_people_types: followers
 
           #leetcode
-          #plugin_leetcode_user: adityarathore2606
-          #plugin_leetcode: yes
-          #plugin_leetcode_sections: solved, skills, recent
-          #plugin_gists: yes
+          plugin_leetcode_user: adityarathore2606
+          plugin_leetcode: yes
+          plugin_leetcode_sections: solved, skills, recent
+          plugin_gists: yes
 
           #rss
           plugin_rss: yes
@@ -142,6 +142,7 @@ jobs:
             base.repositories,
             habit,
             achievements,
+            leetcode,
             lines,
             wakatime,
             stars,
