--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -110,9 +110,10 @@ jobs:
           plugin_anilist_limit_characters: 10
 
           #plugin music
-          plugin_music: yes
-          plugin_music_provider: youtube
-          plugin_music_playlist: https://music.youtube.com/playlist?list=PLd2ArdZjOMpYqzmDw-LwaDDAzHVEadXF0
+          plugin_music_provider: spotify
+          plugin_music_mode: recent
+          plugin_music_token: "${{ secrets.SPOTIFY_CLIENT_ID }}, ${{ secrets.SPOTIFY_CLIENT_SECRET }}, ${{ secrets.SPOTIFY_REFRESH_TOKEN }}"
+          plugin_music_limit: 4
 
           # Peoples
           plugin_people: yes
