--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -21,7 +21,7 @@ jobs:
           filename: github-metrics-${{ github.ref_name }}.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
-          committer_message: "👾👾👾👾"
+          committer_message: "^_^"
 
           # Base configuration
           base: activity, community, repositories, header
@@ -110,6 +110,7 @@ jobs:
           plugin_anilist_limit_characters: 10
 
           #plugin music
+          plugin_music: yes
           plugin_music_provider: spotify
           plugin_music_mode: recent
           plugin_music_token: "${{ secrets.SPOTIFY_CLIENT_ID }}, ${{ secrets.SPOTIFY_CLIENT_SECRET }}, ${{ secrets.SPOTIFY_REFRESH_TOKEN }}"
