--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -32,7 +32,7 @@ jobs:
           plugin_introduction: yes
 
           # Plugin: Fortune
-          plugin_fortune: yes
+          #plugin_fortune: yes
 
           # Plugin: Lines
           plugin_lines: yes
@@ -116,19 +116,13 @@ jobs:
           #plugin_leetcode_sections: solved, skills, recent
           #plugin_gists: yes
 
-          plugin_starlists: yes
-          plugin_starlists_languages: yes
-          plugin_starlists_limit_languages: 8
-          plugin_starlists_limit_repositories: 0
-          plugin_starlists_only: Awesome
-
           #rss
           plugin_rss: yes
           plugin_rss_source: https://news.ycombinator.com/rss
           plugin_rss_limit: 4
 
           #chess
-          plugin_chess: yes
+          #plugin_chess: yes
           plugin_chess_token: ${{ secrets.CHESS_TOKEN }}
           plugin_chess_platform: lichess.org
           plugin_chess_user: Rathore26
