--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -111,10 +111,8 @@ jobs:
           plugin_people_types: followers
 
           #leetcode
-          #plugin_leetcode_user: adityarathore2606
-          #plugin_leetcode: yes
-          #plugin_leetcode_sections: solved, skills, recent
-          #plugin_gists: yes
+          plugin_leetcode_user: adi_s_r
+          plugin_leetcode: yes
 
           #rss
           plugin_rss: yes
