--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -63,8 +63,8 @@ jobs:
           # Plugin: Achievements
           plugin_achievements: yes
           plugin_achievements_only: >-
-            polyglot, stargazer, sponsor, deployer, member, maintainer, developer,
-            scripter, packager, explorer, infographile, manager
+            polyglot, stargazer, deployer, member, maintainer, developer,
+            scripter, explorer, infographile
           plugin_achievements_display: compact
           plugin_achievements_threshold: X
 
