--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -92,7 +92,7 @@ jobs:
 
           
           #website quote
-          #plugin_screenshot: yes
+          # plugin_screenshot: yes
           plugin_screenshot_title: XKCD of the day
           plugin_screenshot_url: https://xkcd.com
           plugin_screenshot_selector: "#comic img"
@@ -107,7 +107,7 @@ jobs:
           plugin_anilist_limit_characters: 4
 
           # Peoples
-          plugin_people: yes
+          # plugin_people: yes
           plugin_people_types: followers
 
           #leetcode
