--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [master, main]
   schedule:
-    - cron: 30 6 * * * # Runs daily at (12:00 AM IST)
+    - cron: 30 6 * * * # Runs daily at 12:00 AM IST
 
 jobs:
   github-metrics:
@@ -21,7 +21,20 @@ jobs:
           filename: github-metrics-${{ github.ref_name }}.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
-          committer_message: "^_^"
+          committer_message: "I am vengeance. I am the night. I am GitHub!"
+
+          # Theme settings (Batman-style)
+          config_display: large
+          config_twemoji: yes
+          config_padding: 0, 10
+          config_octicon: yes
+          config_theme: dark
+          config_base: header
+          config_border: yes
+          config_color: 000000 # Background: Black
+          config_color_title: FFD700 # Yellow-golden titles (like Batman's logo)
+          config_color_text: A9A9A9 # Grey text
+          config_color_icon: FFD700 # Yellow icons
 
           # Base configuration
           base: header
@@ -31,50 +44,32 @@ jobs:
           # Plugin: Intro
           plugin_introduction: yes
 
-          # Plugin: Fortune
-          #plugin_fortune: yes
-
           # Plugin: Lines
           plugin_lines: yes
           plugin_lines_sections: base
           plugin_lines_repositories_limit: 5
           plugin_lines_history_limit: 2
 
-          # Plugin: PageSpeed
-          #plugin_pagespeed: yes
-          #plugin_pagespeed_screenshot: yes
-          #plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
-          #plugin_pagespeed_url: "your_site_url"
-
-          # Plugin:Notable
-          #plugin_notable: yes
-
-          # Plugin: habits
+          # Plugin: Habits
           plugin_habits: yes
           plugin_habits_facts: yes
           plugin_habits_charts: no
           config_timezone: Asia/Kolkata
 
           # Plugin: WakaTime
-          #plugin_wakatime: yes
+          plugin_wakatime: yes
           plugin_wakatime_sections: time, languages, editors, os
           plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
 
           # Plugin: Achievements
-          #plugin_achievements: yes
+          plugin_achievements: yes
           plugin_achievements_only: >-
             polyglot, stargazer, deployer, member, maintainer, developer,
             scripter, explorer, infographile
           plugin_achievements_display: compact
           plugin_achievements_threshold: X
 
-          
-
-          # Plugin: Stargazers
-          #plugin_stargazers: yes
-          #plugin_stargazers_charts: yes
-
-          # Plugin: Isocalender
+          # Plugin: Isocalendar
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
 
@@ -82,23 +77,18 @@ jobs:
           plugin_stars: yes
           plugin_stars_limit: 1
 
-          #Plugin topics
+          # Plugin: Topics
           plugin_topics: yes
           plugin_topics_limit: 15
           plugin_topics_mode: icons
 
-          #Plugin Discussion
-          #plugin_discussions: yes
-
-          
-          #website quote
-          # plugin_screenshot: yes
+          # Plugin: Screenshot (XKCD as placeholder)
+          plugin_screenshot: yes
           plugin_screenshot_title: XKCD of the day
           plugin_screenshot_url: https://xkcd.com
           plugin_screenshot_selector: "#comic img"
-          
-          # Hobbies
-          # Anime 
+
+          # Plugin: Anilist
           plugin_anilist_user: adi2603
           plugin_anilist: yes
           plugin_anilist_medias: manga
@@ -106,34 +96,32 @@ jobs:
           plugin_anilist_limit: 1
           plugin_anilist_limit_characters: 1
 
-          # Peoples
-          # plugin_people: yes
+          # Plugin: People
+          plugin_people: yes
           plugin_people_types: followers
 
-          #leetcode
+          # Plugin: Leetcode
           plugin_leetcode_user: adi_s_r
-          #plugin_leetcode: yes
+          plugin_leetcode: yes
 
-          #rss
+          # Plugin: RSS
           plugin_rss: yes
           plugin_rss_source: https://news.ycombinator.com/rss
           plugin_rss_limit: 4
 
-          #chess
-          #plugin_chess: yes
+          # Plugin: Chess
+          plugin_chess: yes
           plugin_chess_token: ${{ secrets.CHESS_TOKEN }}
           plugin_chess_platform: lichess.org
           plugin_chess_user: Rathore26
 
-          #Display
-          #config_display: large
-          # Configuration order
+          # Order of display
           config_order: |
             introduction,
             base.header,
             base.activity+community,
             base.repositories,
-            habit,
+            habits,
             achievements,
             lines,
             wakatime,
@@ -145,4 +133,4 @@ jobs:
             reactions,
             people,
             anilist+music,
-            screenshot,
+            screenshot
