--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -15,33 +15,34 @@ jobs:
       contents: write
 
     steps:
-      - name: Generate metrics
+      - name: Generate Batman-themed metrics
         uses: lowlighter/metrics@latest
         with:
           filename: github-metrics-${{ github.ref_name }}.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           committer_message: "I am vengeance. I am the night. I am GitHub!"
+          user: <YourGitHubUsername>
 
-          # Theme settings (Batman-style)
-          config_display: large
-          config_twemoji: yes
-          config_padding: 0, 10
-          config_octicon: yes
-          config_theme: dark
-          config_base: header
-          config_border: yes
-          config_color: 000000 # Background: Black
-          config_color_title: FFD700 # Yellow-golden titles (like Batman's logo)
-          config_color_text: A9A9A9 # Grey text
-          config_color_icon: FFD700 # Yellow icons
+          # Use custom Batman community template
+          template: "@batman-dark"
+          setup_community_templates: "your-username/github-metrics-batman@main:batman-dark+trust"
+
+          # Pass custom colors into the Batman theme
+          query: |
+            {
+              "header_color": "#FFD700",
+              "background_color": "#000000",
+              "text_color": "#A9A9A9",
+              "icon_color": "#FFD700"
+            }
 
           # Base configuration
           base: header
           base_indepth: no
           base_hireable: no
 
-          # Plugin: Intro
+          # Plugin: Introduction
           plugin_introduction: yes
 
           # Plugin: Lines
@@ -82,15 +83,15 @@ jobs:
           plugin_topics_limit: 15
           plugin_topics_mode: icons
 
-          # Plugin: Screenshot (XKCD as placeholder)
+          # Plugin: Screenshot (XKCD)
           plugin_screenshot: yes
           plugin_screenshot_title: XKCD of the day
           plugin_screenshot_url: https://xkcd.com
           plugin_screenshot_selector: "#comic img"
 
           # Plugin: Anilist
-          plugin_anilist_user: adi2603
           plugin_anilist: yes
+          plugin_analist_user: adi2603
           plugin_anilist_medias: manga
           plugin_anilist_sections: favorites,characters
           plugin_anilist_limit: 1
@@ -100,22 +101,12 @@ jobs:
           plugin_people: yes
           plugin_people_types: followers
 
-          # Plugin: Leetcode
-          plugin_leetcode_user: adi_s_r
-          plugin_leetcode: yes
-
           # Plugin: RSS
           plugin_rss: yes
           plugin_rss_source: https://news.ycombinator.com/rss
           plugin_rss_limit: 4
 
-          # Plugin: Chess
-          plugin_chess: yes
-          plugin_chess_token: ${{ secrets.CHESS_TOKEN }}
-          plugin_chess_platform: lichess.org
-          plugin_chess_user: Rathore26
-
-          # Order of display
+          # Configuration order
           config_order: |
             introduction,
             base.header,
@@ -125,12 +116,10 @@ jobs:
             achievements,
             lines,
             wakatime,
-            discussions,
             stars,
             isocalendar,
             topics,
             rss,
-            reactions,
             people,
-            anilist+music,
+            anilist,
             screenshot
